--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link rel="stylesheet" href="./style.css" />
+
+        <!-- Google fonts - start -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Piazzolla:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
+        <!-- Google fonts - end -->
+
         <title>Portfolio</title>
     </head>
     <body>
@@ -24,7 +36,7 @@
         <!-- Hero - start -->
         <section class="hero">
             <div class="hero-img">
-                <img src="./images/hero.jpg" alt="hero image" width="300"/>
+                <img src="./images/hero.jpg" alt="hero image"/>
             </div>
             <div>
                 <h1>Hi, my name is Marcus and im a Web Developer</h1>
@@ -63,7 +75,7 @@
             <div class="projects-container">
                 <div class="project">
                     <div class="img-container">
-                        <img src="./images/project1.jpg" alt="project 1" width="600"/>
+                        <img src="./images/project1.jpg" alt="project 1"/>
                         <div class="img-overlay"></div>
                     </div>
                     <div class="project-text-container">
@@ -75,6 +87,55 @@
                             the test. We provide a JSON file to pull the data,
                             but it's also a perfect project to build as a
                             full-stack CRUD app!
+                        </p>
+                        <button>Repository</button>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="img-container">
+                        <img src="./images/project2.jpg" alt="project 2" />
+                        <div class="img-overlay"></div>
+                    </div>
+                    <div class="project-text-container">
+                        <h3 class="project-text-title">Tip calculator app</h3>
+                        <p class="project-text-subtitle">
+                            This small app is perfect for anyone starting to get
+                            to grips with JavaScript. The calculator
+                            functionality will be a nice test!
+                        </p>
+                        <button>Repository</button>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="img-container">
+                        <img src="./images/project3.jpg" alt="project 3" />
+                        <div class="img-overlay"></div>
+                    </div>
+                    <div class="project-text-container">
+                        <h3 class="project-text-title">IP Address Tracker</h3>
+                        <p class="project-text-subtitle">
+                            In this challenge, you'll be using two separate APIs
+                            together to create an IP Address Tracking app.
+                        </p>
+                        <button>Repository</button>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="img-container">
+                        <img src="./images/project4.jpg" alt="project 4" />
+                        <div class="img-overlay"></div>
+                    </div>
+                    <div class="project-text-container">
+                        <h3 class="project-text-title">
+                            Stats preview card component
+                        </h3>
+                        <p class="project-text-subtitle">
+                            This is a great small challenge to help get you used
+                            to building to a design. There's no JS in this
+                            project, so you'll be able to focus on your HTML &
+                            CSS skills.
                         </p>
                         <button>Repository</button>
                     </div>
